# breadbot

./: .gitignore  NEWS  README.md  TODO  console.py  requirements.txt  run.sh  setup.cfg  setup.py  tox.ini
breadAI/: __init__.py
breadAI/core/: __init__.py  bot.py  data.py  dia.py  klg.py  mem.txt  memo.py  memory.py  misc.py  nom.py  search.py  teach.py  wb.txt
breadAI/data/: file.ini
breadAI/serv/: __init__.py
breadAI/server/: __init__.py  manage.py
breadbot/: __init__.py
breadbot/core/: __init__.py  data.py  dia.py  klg.py  memo.py  memory.py  misc.py  search.py  teach.py
breadbot/serv/: __init__.py
core/: __init__.py  bot.py  misc.py
data/: README.md  insert_data.py  new.yml  show_data.py
data/dia/: new.yml
data/klg/: bread.yml  computer.yml  life.yml
data/nom/: bread.yml  computer.yml  economics.yml  embedded.yml  health.yml  help.yml  life.yml  linux.yml  software.yml  windows.yml  work.yml
data/sec/: sec_emotion.yml  sec_myInfo.yml
data/yaml/: ai.yml  badanswer.yml  biography.yml  bot.yml  client.yml  economics.yml  embedded.yml  emotion.yml  food.yml  (+25 more)
doc/: Data_Manual.md
etc/: bread.cfg
tools/: show_same_ques.py
yaml/: atomic.yml  bot.yml  bread.yml  computers.yml  default.yml  drugs.yml  help.yml  history.yml  humor.yml  inquiry.yml  knowledge.yml  linux.yml  literature.yml  mark.yml  money.yml  movies.yml  mp2.yml  mp4.yml  mp5.yml  primeminister.yml  primitive-math.yml  psychology.yml  reduction0.safe.yml  reduction2.safe.yml  reduction3.safe.yml  reduction4.safe.yml  religion.yml  science.yml  sex.yml  update.yml  work.yml
(+119 files in other folders)
