[metadata]
name = breadAI
version = 1.1.0
author = Mark Young
author-email = ideamark@qq.com
home-page = https://github.com/ideamark/bread-ai
description-file = README.md

classifier = 
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

keywords =
    setup
    distutils

[files]
packages =
    breadAI

data_files =
    /etc = etc/*
    /usr/bin = bin/*
    /usr/share/breadAI/data = data/*
